# evaluate_capnproto

./: CMakeLists.txt  CMakeSettings.json  README.md  main.cpp  message.capnp
